fix package loading

--- a/SG170207-1 Assessing MOR expression in Dentate Gyrus by progenitor and granule cells - role in neurogenesis notes.Rmd
+++ b/SG170207-1 Assessing MOR expression in Dentate Gyrus by progenitor and granule cells - role in neurogenesis notes.Rmd
@@ -16,6 +16,8 @@ library(dplyr)
 library(dtplyr)
 library(annotate)
 library(mogene10sttranscriptcluster.db)
+library(ggplot2)
+library(tidyr)
 ```
 
 ```{r get GSE file, message = FALSE, warning = FALSE}
